--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "tslint": "~5.17.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project",
+  "description": "NEOKON Project",
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
