--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@angular/platform-browser": "^9.1.6",
     "@angular/platform-browser-dynamic": "^9.1.6",
     "@angular/router": "^9.1.6",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/camera": "^5.25.0",
+    "@ionic-native/core": "^5.25.0",
+    "@ionic-native/splash-screen": "^5.25.0",
+    "@ionic-native/status-bar": "^5.25.0",
     "@ionic/angular": "^5.1.0",
     "cordova-ios": "^5.0.1",
     "core-js": "^2.5.4",
