--- a/angular.json
+++ b/angular.json
@@ -41,6 +41,9 @@
                             },
                             {
                                 "input": "src/app/app.scss"
+                            },
+                            {
+                                "input": "node_modules/bootstrap/dist/css/bootstrap.min.css"
                             }
                         ],
                         "scripts": [],
