--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
         "@ionic-native/status-bar": "^5.25.0",
         "@ionic/angular": "^5.1.0",
         "bootstrap": "^4.5.0",
-        "cordova-ios": "^5.0.1",
+        "cordova-android": "^8.1.0",
         "core-js": "^2.5.4",
         "ionic-angular": "3.9.10",
+        "platform": "1.3.5",
         "rxjs": "~6.5.5",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/architect": "~0.13.8",
-        "@angular-devkit/build-angular": "^0.901.5",
-        "@angular-devkit/core": "~9.1.5",
-        "@angular-devkit/schematics": "~9.1.5",
+        "@angular-devkit/architect": "^0.901.6",
+        "@angular-devkit/build-angular": "^0.901.6",
+        "@angular-devkit/core": "^9.1.6",
+        "@angular-devkit/schematics": "^9.1.6",
         "@angular/cli": "~9.1.5",
         "@angular/compiler": "~9.1.6",
         "@angular/compiler-cli": "~9.1.6",
@@ -64,7 +65,7 @@
         "tslint": "~5.17.0",
         "typescript": "~3.8.3"
     },
-    "description": "NEOKON Project",
+    "description": "KG-ALL Project",
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
@@ -75,7 +76,7 @@
             "cordova-plugin-ionic-keyboard": {}
         },
         "platforms": [
-            "ios"
+            "android"
         ]
     }
 }
