--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,8 @@
 {
-  "name": "construction-ionic",
+  "name": "kg-all",
   "integrations": {
     "cordova": {}
   },
-  "type": "angular"
+  "type": "angular",
+  "id": "eab96643"
 }
