--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "cordova-android": "^8.1.0",
         "core-js": "^2.5.4",
         "ionic-angular": "3.9.10",
+        "moment": "^2.27.0",
         "normalize.css": "^8.0.1",
         "platform": "1.3.5",
         "rxjs": "~6.5.5",
