--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "bootstrap": "^4.5.0",
         "cordova-android": "^8.1.0",
         "core-js": "^2.5.4",
+        "file-saver": "^2.0.2",
         "ionic-angular": "3.9.10",
         "moment": "^2.27.0",
+        "ng2-pdf-viewer": "^6.3.0",
         "normalize.css": "^8.0.1",
         "platform": "1.3.5",
         "rxjs": "~6.5.5",
