--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
         "@angular/platform-browser": "^9.1.6",
         "@angular/platform-browser-dynamic": "^9.1.6",
         "@angular/router": "^9.1.6",
+        "@ionic-native/call-number": "^5.27.0",
         "@ionic-native/camera": "^5.25.0",
         "@ionic-native/core": "^5.25.0",
         "@ionic-native/splash-screen": "^5.26.0",
         "@ionic-native/status-bar": "^5.25.0",
         "@ionic/angular": "^5.1.0",
         "bootstrap": "^4.5.0",
+        "call-number": "^1.0.1",
         "cordova-android": "^8.1.0",
         "core-js": "^2.5.4",
         "file-saver": "^2.0.2",
@@ -78,7 +80,8 @@
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-ionic-keyboard": {}
+            "cordova-plugin-ionic-keyboard": {},
+            "mx.ferreyra.callnumber": {}
         },
         "platforms": [
             "android"
