--- a/package.json
+++ b/package.json
@@ -19,15 +19,25 @@
         "@angular/platform-browser": "^9.1.6",
         "@angular/platform-browser-dynamic": "^9.1.6",
         "@angular/router": "^9.1.6",
+        "@ionic-native/android-permissions": "^5.27.0",
         "@ionic-native/call-number": "^5.27.0",
         "@ionic-native/camera": "^5.25.0",
         "@ionic-native/core": "^5.25.0",
+        "@ionic-native/document-viewer": "^5.27.0",
+        "@ionic-native/file": "^5.27.0",
+        "@ionic-native/file-opener": "^5.27.0",
+        "@ionic-native/file-transfer": "^5.27.0",
         "@ionic-native/splash-screen": "^5.26.0",
         "@ionic-native/status-bar": "^5.25.0",
         "@ionic/angular": "^5.1.0",
         "bootstrap": "^4.5.0",
         "call-number": "^1.0.1",
         "cordova-android": "^8.1.0",
+        "cordova-plugin-android-permissions": "^1.0.2",
+        "cordova-plugin-document-viewer": "^0.9.13",
+        "cordova-plugin-file": "^6.0.2",
+        "cordova-plugin-file-opener2": "^3.0.3",
+        "cordova-plugin-file-transfer": "^1.7.1",
         "core-js": "^2.5.4",
         "file-saver": "^2.0.2",
         "ionic-angular": "3.9.10",
@@ -81,7 +91,14 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-ionic-keyboard": {},
-            "mx.ferreyra.callnumber": {}
+            "mx.ferreyra.callnumber": {},
+            "cordova-plugin-file-transfer": {},
+            "cordova-plugin-file": {},
+            "cordova-plugin-document-viewer": {},
+            "cordova-plugin-file-opener2": {
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
+            },
+            "cordova-plugin-android-permissions": {}
         },
         "platforms": [
             "android"
