--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@ionic-native/file": "^5.27.0",
         "@ionic-native/file-opener": "^5.27.0",
         "@ionic-native/file-transfer": "^5.27.0",
+        "@ionic-native/local-notifications": "^5.27.0",
         "@ionic-native/splash-screen": "^5.26.0",
         "@ionic-native/status-bar": "^5.25.0",
         "@ionic/angular": "^5.1.0",
@@ -34,10 +35,12 @@
         "call-number": "^1.0.1",
         "cordova-android": "^8.1.0",
         "cordova-plugin-android-permissions": "^1.0.2",
+        "cordova-plugin-badge": "^0.8.8",
         "cordova-plugin-document-viewer": "^0.9.13",
         "cordova-plugin-file": "^6.0.2",
         "cordova-plugin-file-opener2": "^3.0.3",
         "cordova-plugin-file-transfer": "^1.7.1",
+        "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "core-js": "^2.5.4",
         "file-saver": "^2.0.2",
         "ionic-angular": "3.9.10",
@@ -98,7 +101,8 @@
             "cordova-plugin-file-opener2": {
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
             },
-            "cordova-plugin-android-permissions": {}
+            "cordova-plugin-android-permissions": {},
+            "cordova-plugin-local-notification": {}
         },
         "platforms": [
             "android"
